--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Xing Chen">
     <link rel="index" title="Xing Chen" href="/">
     <title>{{ page.title }}</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <style type="text/css">
       body {
         margin:40px auto;
