--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         font-size:18px;
         color:rgb(44, 44, 44);
         padding:0 10px;
-        font-family: "Open Sans";
+        font-family: 'Open Sans', 'Monaco', 'Helvetica', 'Arial', sans-serif;
       }
       h1,h2,h3 { line-height:1.2; }
     </style>
