--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
     <!-- MAIN CONTENT -->
     {{ content }}
-
+    {% include ads.html %}
     <!-- FOOTER  -->
     {% if site.google_analytics %}
       <script>
